--- a/custom_components/airkey_dsj/manifest.json
+++ b/custom_components/airkey_dsj/manifest.json
@@ -1,6 +1,6 @@
 {
     "domain": "airkey",
-    "name": "Evva Airkey (custom)",
+    "name": "Evva Airkey DSJ",
     "version": "1.0.0",
     "documentation": "https://github.com/YoranT",
     "requirements": [],
